# agent-pay-for-urself

./: .env.example  .example.env  .gitignore  .replit  AGENTS.md  README.md  docker-compose.yml  flowchart.md  front-design.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  system-goal.md
.migration-backup/: .env.example  .replit  AGENTS.md  README.md  front-design.md  pyproject.toml
.migration-backup/agent_pay_for_urself/: __init__.py  orchestrator.py  schemas.py
.migration-backup/docs/: README.md  agent-structure.md  api-contracts.md  development-plan.md  frontend-guide.md  repository-map.md
.migration-backup/frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.migration-backup/tests/: test_agent_prompts.py  test_api.py  test_api_account.py  test_api_experiments.py  test_api_history.py  test_services.py  (+6 more)
agent_pay_for_urself/: orchestrator.py  schemas.py
docs/: DOCS_GUIDE.md  README.md  TESTS_GUIDE.md  agent-structure.md  api-contracts.md  architecture.md  development-plan.md  domain-rules.md  frontend-guide.md  korea-investment-api.md  project-overview.md  repository-map.md
frontend/: next-env.d.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: bootstrap-node24.sh
tests/: test_agent_prompts.py  test_agent_settings.py  test_api.py  test_api_decisions.py  test_api_experiments.py  test_api_history.py  test_api_logging.py  test_api_market_data.py  test_api_orders.py  test_broker_adapter.py  test_llm_template.py  test_market_data_provider.py  test_orchestrator.py  test_services.py
(+163 files in other folders)
