[project]
name = "agent-pay-for-urself"
version = "0.1.0"
description = "Multi-agent investment decision support platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.2.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_pay_for_urself"]

[dependency-groups]
dev = [
    "poethepoet>=0.29.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.poe.tasks]
dev = "uvicorn agent_pay_for_urself.api.main:app --reload"
test = "pytest"
lint = "ruff check ."

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
